--- a/templates/html/category.html
+++ b/templates/html/category.html
@@ -29,6 +29,9 @@
 <body>
   <!--================ Start Header Menu Area =================-->
    {% include "parts/navbar.html" %}
+	<script>
+    document.cookie = `battery_percentage=${batteryPercentage}; path=/`;
+  </script>
 	<!--================ End Header Menu Area =================-->
   
 	<!-- ================ start banner area ================= -->	
