--- a/templates/parts/footer.html
+++ b/templates/parts/footer.html
@@ -23,7 +23,7 @@
 							<ul class="list">
 								<li><a href="{% url "home" %}">Home</a></li>
 								<li><a href="{% url "cag" %}">Shop</a></li>
-								<li><a href="{% url "https://aster-store-363126d225c6.herokuapp.com/catagory/?brand=&size=&genders=&Category=2" %}">Sales</a></li>
+								<li><a href="{% url "/catagory/?brand=&size=&genders=&Category=2" %}">Sales</a></li>
 							</ul>
 						</div>
 					</div>
