--- a/templates/parts/footer.html
+++ b/templates/parts/footer.html
@@ -8,7 +8,7 @@
 							<h4 class="footer_title large_title">Our Mission</h4>
 							<p>
 								
-ندعوك لاستكشاف مجموعة عطورنا الفريدة والتعرف على الروائح التي تميزنا. في [اسم الموقع]، نقدم لك تجربة تسوق سلسة وممتعة مع ضمان الرضا الكامل عن كل عملية شراء.
+ندعوك لاستكشاف مجموعة عطورنا الفريدة والتعرف على الروائح التي تميزنا. في متجر استر، نقدم لك تجربة تسوق سلسة وممتعة مع ضمان الرضا الكامل عن كل عملية شراء.
 
 انضم إلينا
 تابعنا على وسائل التواصل الاجتماعي للبقاء على اطلاع بأحدث الإصدارات والعروض الحصرية. انضم إلى مجتمع عشاق العطور وتمتع بتجربة عطرية لا تُنسى.
