--- a/templates/html/index.html
+++ b/templates/html/index.html
@@ -94,7 +94,7 @@
         <div class="hero-carousel__slide">
           <img src="{% static 'imgs/olymp.jpg'%}" alt="" class="img-fluid">
           <a href="/catagory/?catagory=&brand=&genders=f" class="hero-carousel__slideOverlay">
-            <h3>عطور نسواني</h3>
+            <h3>عطور حريمي/h3>
             <p>Accessories Item</p>
           </a>
         </div>
