--- a/templates/parts/footer.html
+++ b/templates/parts/footer.html
@@ -21,8 +21,8 @@
 						<div class="single-footer-widget tp_widgets">
 							<h4 class="footer_title">Quick Links</h4>
 							<ul class="list">
-								<li><a href="{% url "home" %}">Home</a></li>
-								<li><a href="{% url "cag" %}">Shop</a></li>
+									<li><a href="www.aster-store.com">Home</a></li>
+								<li><a href="https://www.aster-store.com/catagory/">Shop</a></li>
 								<li><a href="">Sales</a></li>
 							</ul>
 						</div>
