--- a/templates/html/cart.html
+++ b/templates/html/cart.html
@@ -100,7 +100,7 @@
 	<!--================ End footer Area  =================-->
 <script>
 function myFunction() {
-    fetch("www.aster-store.com/data/")
+    fetch("data/")
   .then(response => {
     if (!response.ok) {
       throw new Error(`HTTP error! Status: ${response.status}`);
