--- a/templates/html/checkout.html
+++ b/templates/html/checkout.html
@@ -163,7 +163,7 @@
 
  <script>
  function myFunction() {
-    fetch("checkout/data/")
+    fetch("data/")
   .then(response => {
     if (!response.ok) {
       throw new Error(`HTTP error! Status: ${response.status}`);
