--- a/templates/parts/navbar.html
+++ b/templates/parts/navbar.html
@@ -38,7 +38,7 @@ href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.
     <div class="main_menu">
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
-          <a class="navbar-brand logo_h" href="{%url 'home' %}"> Aster Flower </a>
+          <a class="navbar-brand logo_h" href="{%url 'home' %}"><img src="{% static 'imgs/logo.png' %}" style="padding: 0;margin: 0;" width="80" height="80" alt=""> Aster Flower </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="icon-bar"></span>
