--- a/templates/html/category.html
+++ b/templates/html/category.html
@@ -88,7 +88,7 @@
                   </div>
                   <div class="card-body">
                     <p>{{i.catagory}}</p>
-                    <h4 class="card-product__title"><a id="name" href="{% url 'products' i.product.id  %}">{{i.product.name | truncatewords:2  }}</a></h4>
+                    <h4 style="max-width: 170px;" class="card-product__title"><a id="name" href="{% url 'products' i.product.id  %}">{{i.product.name | truncatewords:2  }}</a></h4>
                   <a  style="color: black;" href="{% url 'products' i.product.id  %}">
                     <p class="card-product__price">{{i.discount}}EGP</p>
                       <p style="text-decoration: line-through;font-size: 15px;"  class="card-product__price">{{i.price}}EGP</p>
@@ -120,17 +120,18 @@
             <div style="position: absolute; left: -5000px;">
               <input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
             </div>
-
           </form>
         </div>
-        
       </div>
     </div>
   </section>
   <style>
    @media only screen and (max-width: 433px){
     .ddddd{
-        margin-left : 30px;
+        margin-left : 15px;
+    }
+    .card-img{
+     
     }
 }
   </style>
