--- a/templates/html/category.html
+++ b/templates/html/category.html
@@ -126,9 +126,17 @@
     </div>
   </section>
   <style>
-   @media only screen and (max-width: 433px){
+   @media only screen and (max-width: 490px){
     .ddddd{
-        margin-left : 35px;
+        margin-left : 40px;
+    }
+    .card-img{
+     
+    }
+}
+@media only screen and (max-width: 380px){
+    .ddddd{
+        margin-left : 15px;
     }
     .card-img{
      
