--- a/templates/html/index.html
+++ b/templates/html/index.html
@@ -85,21 +85,21 @@
     <section class="section-margin observed  mt-0" >
       <div class="owl-carousel owl-theme hero-carousel">
         <div class="hero-carousel__slide">
-          <img src="{% static 'imgs/suf.jpg'%}" alt="" class="img-fluid">
+          <img loading="lazy" src="{% static 'imgs/suf.jpg'%}" alt="" class="img-fluid">
           <a href="/catagory/?catagory=&brand=&genders=m" class="hero-carousel__slideOverlay">
             <h3>عطور رجالي</h3>
             <p>Accessories Item</p>
           </a>
         </div>
         <div class="hero-carousel__slide">
-          <img src="{% static 'imgs/olymp.jpg'%}" alt="" class="img-fluid">
+          <img  loading="lazy" src="{% static 'imgs/olymp.jpg'%}" alt="" class="img-fluid">
           <a href="/catagory/?catagory=&brand=&genders=f" class="hero-carousel__slideOverlay">
             <h3>عطور حريمي/h3>
             <p>Accessories Item</p>
           </a>
         </div>
         <div class="hero-carousel__slide">
-          <img src="{% static 'imgs/khamra.jpg'%}" alt="" class="img-fluid">
+          <img  loading="lazy" src="{% static 'imgs/khamra.jpg'%}" alt="" class="img-fluid">
           <a href="/catagory/?catagory=&brand=&genders=u" class="hero-carousel__slideOverlay">
             <h3>للجنسين</h3>
             <p>Accessories Item</p>
