--- a/templates/html/product.html
+++ b/templates/html/product.html
@@ -100,10 +100,10 @@ box-shadow: 0 0 0 1px #693a86;
             &nbsp;
             
 						<span  style="color: white;">{{pk.id}}</span>
-            <P>
-              Masterbox: العطر داخل العلبة الاصلىة ليه
+         <P>
+              Masterbox:  الاصدار الرسمي الاصلي و القادم من الماركات و الاعلي سعرا
              <br>
-              Outlet: العطر الاصلي بدون علبة
+              Outlet: العطر نفس جودة النوع السابق من كل شيء ( رائحة - ثبات - فوحان ) - بدون علبه - 
               <br>
               Tester: زجاجة تجريبية 30ملي من العطر
           <br>
